--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello Everyone tt</h1>
-    <p>this is a demo class !!!</p>
+    <p>this is a demo class ,how are you</p>
 </body>
 </html>
